# dataset-format-test

./: .gitignore  README.md  gen_data.py  gen_readme.py  pyproject.toml  sample-random-hugginface.py  sample-random-jsonl-mmap.py  sample-random-jsonl.py  sample-random-pyarrow.py  sample_stats.json
