[tool.poetry]
name = "dataset-bench"
version = "0.1.0"
description = ""
authors = ["martins0n <33594071+martins0n@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
datasets = "^2.15.0"
psutil = "^5.9.7"
zstandard = "^0.22.0"
pyarrow = "^14.0.2"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
